--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,11 @@ logging.level.org.springframework.mail.javamail=DEBUG
 # Parametres de connexion au serveur SMTP
 app.frontend.reset-url.client=http://localhost:8080/api/V1/password/reset
 app.frontend.reset-url.manager=http://localhost:8080/api/V1/manager/password/reset
-spring.mail.host=eservices-gabon.com
+
+spring.mail.host=solutech-one.com
 spring.mail.port=465
-spring.mail.username=notify@eservices-gabon.com
-spring.mail.password=O930UKZ5Pa25
+spring.mail.username=noreply@solutech-one.com
+spring.mail.password=5qUlANOYx7P!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
