date d'envoie + suspention + notif

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ logging.level.org.springframework.mail.javamail=DEBUG
 
 
 # Parametres de connexion au serveur SMTP
-app.frontend.reset-url.client=http://localhost:8080/api/V1/password/reset
-app.frontend.reset-url.manager=http://localhost:8080/api/V1/manager/password/reset
+app.frontend.reset-url.client=https://api-smsgateway.solutech-one.com/api/V1/password/reset
+app.frontend.reset-url.manager=https://api-smsgateway.solutech-one.com/api/V1/manager/password/reset
 
 spring.mail.host=solutech-one.com
 spring.mail.port=465
