--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ logging.level.org.springframework.mail.javamail=DEBUG
 
 
 # Parametres de connexion au serveur SMTP
-app.frontend.reset-url.client=https://api-smsgateway.solutech-one.com/api/V1/password/reset
-app.frontend.reset-url.manager=https://api-smsgateway.solutech-one.com/api/V1/manager/password/reset
+app.frontend.reset-url.client=http://localhost:4200/api/V1/password/reset
+app.frontend.reset-url.manager=http://localhost:3001/api/V1/manager/password/reset
 
 spring.mail.host=solutech-one.com
 spring.mail.port=465
@@ -28,4 +28,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+
+smsbox.apikey=pub-09cb0f7cf9f44957b78136028e042877-8f6e8015-3c86-495d-b5b9-3f0885b2b70f
+
 
