--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,5 +33,24 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.debug=true
 
 
+#spring.mail.host=eservices-gabon.com
+#spring.mail.port=465
+#spring.mail.username=notify@eservices-gabon.com
+#spring.mail.password=O930UKZ5Pa25
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.ssl.enable=true
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=ngwambilaj@gmail.com
+#spring.mail.password=fnzf nfhl gtnb olnv
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.protocol=smtp
+
+
+
 
 
