--- a/compose.yml
+++ b/compose.yml
@@ -23,7 +23,7 @@ services:
       - "9088:8080"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://86.105.252.192:5432/smsgatewaydb
-      SPRING_DATASOURCE_USERNAME: mon_user
+      SPRING_DATASOURCE_USERNAME: springuser
       SPRING_DATASOURCE_PASSWORD: e0d9249d4b3e4156f803dba1faf98ed52d9af65f32192a69abe6d3eaca416607
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
       SPRING_JPA_SHOW_SQL: "true"
