--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=smsgateway
 
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/smsgatewaydb
-spring.datasource.username=postgres
-spring.datasource.password=123456789
+#spring.datasource.url=jdbc:postgresql://localhost:5432/smsgatewaydb
+#spring.datasource.username=postgres
+#spring.datasource.password=123456789
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
